--- a/files/.config/hypr/hyprland.conf
+++ b/files/.config/hypr/hyprland.conf
@@ -128,11 +128,12 @@ misc {
 ### INPUT ###
 #############
 input {
-    kb_layout = us
+    kb_layout = us,latam
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
+    numlock_by_default = true
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     touchpad {
